<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/game_bg"
    tools:context=".activities.PlayGameActivity">

    <LinearLayout
        android:id="@+id/team_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <ImageView
            android:id="@+id/blue_team_picture"
            android:layout_width="@dimen/item_team_game_activity"
            android:layout_height="@dimen/item_team_game_activity"
            android:layout_margin="@dimen/item_margin"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/default_blue_team_name" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="@dimen/smaller_margin">

            <TextView
                android:id="@+id/blue_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_team_name" />

            <TextView
                android:id="@+id/blue_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_score_blue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/nb_word_choices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nb_choice_speakable" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="@dimen/smaller_margin">

            <TextView
                android:id="@+id/red_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_team_name" />

            <TextView
                android:id="@+id/red_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_score_red"  />

        </LinearLayout>

        <ImageView
            android:id="@+id/red_team_picture"
            android:layout_width="@dimen/item_team_game_activity"
            android:layout_height="@dimen/item_team_game_activity"
            android:layout_margin="@dimen/item_margin"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/default_red_team_name" />

    </LinearLayout>

    <View
        android:id="@+id/current_team"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/blue_team"
        app:layout_constraintBottom_toBottomOf="@+id/team_display" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/plate_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_margin"
        android:paddingTop="@dimen/smaller_margin"
        android:paddingBottom="@dimen/smaller_margin"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="550dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_display"
        app:spanCount="3"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/spy_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/spy_view_btn_speakable"
            app:srcCompat="@drawable/spy_btn" />

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/home_btn_speakable"
            app:srcCompat="@drawable/home_btn" />

        <ImageButton
            android:id="@+id/skip_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/skip_turn_btn_speakable"
            app:srcCompat="@drawable/ic_skip" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>