<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".activities.GameRulesActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_back_arrow"
        android:layout_margin="@dimen/smaller_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/retour" />

    <TextView
        android:id="@+id/page_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:paddingBottom="40dp"
        android:id="@+id/nestedScrollView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page_title">

            <TextView
                android:id="@+id/title_rules"
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_rules"
                android:textColor="@color/darker_maincolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules"
                android:textColor="@color/black"
                android:padding="@dimen/default_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_rules" />

            <TextView
                android:id="@+id/how_to_use_app"
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/how_to_use"
                android:textColor="@color/darker_maincolor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rules" />

            <ImageView
                android:id="@+id/spy_picture"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:src="@drawable/spy_button_picture"
                app:layout_constraintEnd_toEndOf="@+id/how_to_use_app"
                app:layout_constraintStart_toStartOf="@+id/how_to_use_app"
                app:layout_constraintTop_toBottomOf="@+id/how_to_use_app"
                android:layout_marginTop="@dimen/smaller_margin"/>

            <TextView
                android:id="@+id/spy_picture_subtitlte"
                style="@style/SubtitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules_spy_button"
                android:textColor="@color/darker_maincolor"
                app:layout_constraintEnd_toEndOf="@+id/spy_picture"
                app:layout_constraintStart_toStartOf="@+id/spy_picture"
                app:layout_constraintTop_toBottomOf="@+id/spy_picture" />

            <TextView
                android:id="@+id/spy_picture_explaination"
                style="@style/DefaultTextStyle"
                android:textSize="15sp"
                android:padding="@dimen/smaller_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smaller_margin"
                android:text="@string/rules_spy_button_explaination"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spy_picture_subtitlte" />

            <ImageView
                android:id="@+id/home_picture"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:src="@drawable/home_button_picture"
                app:layout_constraintEnd_toEndOf="@+id/how_to_use_app"
                app:layout_constraintStart_toStartOf="@+id/how_to_use_app"
                app:layout_constraintTop_toBottomOf="@+id/spy_picture_explaination"
                android:layout_marginTop="@dimen/default_margin"/>

            <TextView
                android:id="@+id/home_picture_subtitlte"
                style="@style/SubtitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules_home_button"
                android:textColor="@color/darker_maincolor"
                app:layout_constraintEnd_toEndOf="@+id/home_picture"
                app:layout_constraintStart_toStartOf="@+id/home_picture"
                app:layout_constraintTop_toBottomOf="@+id/home_picture" />

            <TextView
                android:id="@+id/home_picture_explaination"
                style="@style/DefaultTextStyle"
                android:textSize="15sp"
                android:padding="@dimen/smaller_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smaller_margin"
                android:text="@string/rules_home_button_explaination"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_picture_subtitlte"/>

            <ImageView
                android:id="@+id/skipturn_picture"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:src="@drawable/skip_button_picture"
                app:layout_constraintEnd_toEndOf="@+id/home_picture_explaination"
                app:layout_constraintStart_toStartOf="@+id/home_picture_explaination"
                app:layout_constraintTop_toBottomOf="@+id/home_picture_explaination"
                android:layout_marginTop="@dimen/default_margin"/>

            <TextView
                android:id="@+id/skipturn_picture_subtitlte"
                style="@style/SubtitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules_skipturn_button"
                android:textColor="@color/darker_maincolor"
                app:layout_constraintEnd_toEndOf="@+id/skipturn_picture"
                app:layout_constraintStart_toStartOf="@+id/skipturn_picture"
                app:layout_constraintTop_toBottomOf="@+id/skipturn_picture" />

            <TextView
                android:id="@+id/skipturn_picture_explaination"
                style="@style/DefaultTextStyle"
                android:textSize="15sp"
                android:padding="@dimen/smaller_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smaller_margin"
                android:text="@string/rules_skipturn_button_explaination"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/skipturn_picture_subtitlte" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>